# web-app

./: .gitignore  .pre-commit-config.yaml  README.md  build_and_publish.sh  docker-compose.yaml
.github/workflows/: ci.yml  lint.yml
backend/: .gitignore  Dockerfile  README.md  populate_db.py  pyproject.toml  requirements.txt
backend/app/: db.py  llm.py  main.py  models.py  populate_db.py  schemas.py  vespa_retriever.py
backend/app/routers/: articles.py  directories.py  external.py  users.py
backend/app/schemas/: articles.py  users.py
backend/data/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  john_doe_articles.json
backend/docs/: models.md
backend/src/: main.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  PrivateRoute.tsx  index.css  index.tsx
frontend/src/auth/: LoginPage.tsx  RegisterPage.tsx  login.css
frontend/src/components/: Folder.tsx  Folders.tsx
frontend/src/components/Article/: ArticleCard.tsx
frontend/src/components/Chat/: Chat.tsx
frontend/src/components/Directory/: CreateFolderModal.tsx  FileView.tsx  Popup.tsx  SmartFileView.tsx  fileview.css  image.css
frontend/src/components/Home/: SidebarComp.tsx
frontend/src/homepage/: Home.tsx
frontend/src/redux/: store.ts
frontend/src/styles/: article.css  chat.css  homepage.css
frontend/src/types/: file.ts  space.ts
frontend/src/util/: api.tsx
k8s/: backend.yml  clusterissuer.yaml  cors-middleware.yml  frontend.yml  ingress.yaml  prefix-strip-middleware.yaml  prefix-vespa-middleware.yaml  vespa.yml
(+37 files in other folders)
